# URL-shortener

./: .env  pyproject.toml
app/: .env  main.py
app/CRUD/: partners_crud.py  url.py  url_crud.py  user_crud.py
app/api/: routers.py
app/api/routes/: auth.py  redirect.py  redirect_url.py  url_shortener.py
app/config/: database.py
app/core/: config.py  database_config.py  env_config.py  exception_handlers.py  logging_config.py  security_config.py
app/database/: init_db.py
app/models/: api_key_model.py  redirect.py  url_db_model.py  url_shortener.py  url_shortener_models.py  user_db_model.py
app/schema/: api_key_schema.py  create_tables.py  init_db.py  token_schema.py  url_shortener_schema.py  user_schema.py
app/utils/: utils.py
scripts/: start.sh
